assert-struct/tests/snapshots/sets__set_no_valid_assignment.snap
---
source: assert-struct/tests/sets.rs
expression: message
---
error: assert_struct! failed
 --> assert-struct/tests/sets_errors/no_valid_assignment.rs:7:27
  |
7 |     assert_struct!(items, #(1, < 0, 3));
  |                           ^ set pattern mismatch (exact), got 3 element(s)
